--- a/css/style.css
+++ b/css/style.css
@@ -1,111 +1,105 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Wix Madefor Display', sans-serif;
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
     min-width: 100vw;
-
-    background-image: linear-gradient(45deg, #000000,#000000c7,#000000e0);
+    text-transform: capitalize;
+    background: rgb(27, 51, 172);
+    background: radial-gradient(circle, rgba(27, 51, 172, 1) 4%, rgba(66, 66, 190, 1) 42%, rgba(79, 196, 219, 1) 100%);
 }
 
-.container
-.container_divs{
-    background-color: #00000091;
+.container .container_divs {
+    background-color: #24268891;
     padding: 20px;
     width: 95%;
     border-radius: 10px;
     max-width: 450px;
 }
 
-.container
-.container_divs
-.input_btn h1{
+.container .container_divs .input_btn h1 {
     color: aliceblue;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 20px;
 }
-.container
-.container_divs
-.input_btn
-.nome_cidade{
+
+.container .container_divs .input_btn .nome_cidade {
     border: none;
     outline: none;
     border-radius: 10px;
     height: 35px;
-    width:80%;
-    margin-right: 30px;
-    padding-left: 10px;
+    width: 80%;
+    padding-left: 12px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    font-family: 'Wix Madefor Display', sans-serif;
 }
-.container
-.container_divs
-.input_btn
-.nome_cidade::placeholder{
-    padding: 10px;
-}   
-.container
-.container_divs
-.input_btn
-.btn_pesquisar{
+
+.container .container_divs .input_btn .nome_cidade::placeholder {
+   
+}
+
+.container .container_divs .input_btn .btn_pesquisar {
     width: 40px;
-    height:40px;
+    height: 40px;
     border: none;
     outline: none;
     cursor: pointer;
     border-radius: 50%;
-    float:right;
+    float: right;
 }
 
 
-.container
-.container_divs
-.city_graus{
+.container .container_divs .city_graus {
     color: aliceblue;
 }
-.container
-.container_divs
-.city_graus
-.nome_cidade_tempo{
+
+.container .container_divs .city_graus .nome_cidade_tempo {
     margin-top: 20px;
     font-size: 1.4rem;
     font-weight: 600;
 }
 
-.container
-.container_divs
-.city_graus
-.graus_city{
+.container .container_divs .city_graus .graus_city {
     font-size: 1.2rem;
     font-weight: 700;
     color: aliceblue;
 }
-.nubla_umidade{
+
+.nubla_umidade {
     display: flex;
     color: aliceblue;
     align-items: center;
 }
 
 
-.container
-.container_divs
-.nubla_umidade
-.nublado{
+.container .container_divs .nubla_umidade .nublado {
     padding-top: 15px;
     font-size: 1.2rem;
     font-weight: 600;
 }
-.container_divs
-._div_umidade
-.umidade{
+
+.container_divs ._div_umidade .umidade {
     font-size: 1rem;
     font-weight: 600;
     color: aliceblue;
+}
+
+
+@media screen and (max-width:700px) {
+
+    .container .container_divs .input_btn .nome_cidade {
+    width: 80%;
+    margin-right: 0px;
+}
 }
